fixed min width issue on smaller mobile devices

--- a/src/components/Inputs/Textarea.module.scss
+++ b/src/components/Inputs/Textarea.module.scss
@@ -5,7 +5,6 @@
 	margin: 1rem auto 0;
 	height: 1rem;
 	width: 50%;
-	min-width: 300px;
 	max-width: 400px;
 }
 
@@ -60,7 +59,6 @@
 	border: 1px solid #bbb;
 	transition: all 0.1s;
 	width: 50%;
-	min-width: 300px;
 	margin: 0 auto;
 	border-radius: 5px;
 	max-width: 400px;
@@ -95,7 +93,6 @@
 	display: block;
 	font-size: 0.75rem;
 	width: 50%;
-	min-width: 300px;
 	margin: 0 auto;
 	padding: 0;
 	margin-bottom: 1rem;
